<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Tela_Resultado">

    <TextView
        android:id="@+id/txtIMC"
        android:text="@string/titulo"
        android:background="@color/roxinho"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="65dp" />
    <!-- Comentário em LINHA: Ctrl + / -->
    <!-- Comentário em BLOCO: Ctrl + Shift + / -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtResultado"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCalcularNovamente"
        android:layout_marginTop="35dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:text="@string/novoCalculo"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="65dp" />

    <Button
        android:id="@+id/btnSair"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>